# wisdom-studio

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FORKING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fly.toml.example  osv-scanner.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml
apps/studio-api/: pyproject.toml
apps/studio-api/studio_api/: __init__.py  auth.py  cost.py  examples.py  main.py  schemas.py  sdk_factory.py  sdk_mount.py  seeds.py  sessions.py  settings.py  store.py  workspace.py
apps/studio-api/tests/: conftest.py  test_api.py  test_auth.py  test_deployment_env.py  test_static_serve.py  test_tier_restriction.py  test_workspace_messages.py  test_workspace_pool.py  test_workspace_status.py
apps/studio-web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/studio-web/src/: App.tsx
apps/studio-web/src/__tests__/: Banner.test.tsx  SessionEndedView.test.tsx  SessionTimer.test.tsx  api.test.ts
apps/studio-web/src/components/: ChatMarkdown.tsx  MemoryMap.tsx  MemoryMapOverlay.tsx  Shell.tsx  useMemoryMap.ts
apps/studio-web/src/components/insights/: Critic.tsx  (+3 more)
apps/studio-web/src/lib/: api.ts  store.ts
apps/studio-web/src/pages/: AgentDetail.tsx  Dashboard.tsx  FirstRun.tsx  NewAgent.tsx  Settings.tsx  Workspace.tsx
apps/studio-web/src/types/: api.ts  sdk.ts
examples/: README.md  coding_assistant.yaml  generic.yaml  researcher.yaml  support_agent.yaml  team_critic.yaml  team_researcher.yaml  team_synthesizer.yaml  writer.yaml
examples/seeds/: README.md  coding_assistant.json  researcher.json  support_agent.json
(+4 files in other folders)
